--- a/style.css
+++ b/style.css
@@ -390,9 +390,9 @@ img.aligncenter {
 	padding: 30px 0px;
 	line-height: normal;
 	text-align: center;
-	color: #1F1F1F;
+	color: #FF63FF;
 }
 
 #footer a {
-	color: #121212;
+	color: #FF63FF;
 }
