--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ h1, h2, h3 {
 	padding: 0;
 	font-family: 'Open Sans', sans-serif;
 	font-weight: normal;
-	color:#1CFFFF;
+	color:#0A0A0A;
 }
 
 h1 {
