--- a/style.css
+++ b/style.css
@@ -156,7 +156,9 @@ img.aligncenter {
 	line-height: 60px;
 	text-decoration: none;
 	text-transform: uppercase;
-	font-size: 30px;
+	display: flex;
+   	font-size: 500px;
+	align-items: center; 
 	font-weight: 700;
 	color: #FFFFFF;
 	border: none;
