--- a/style.css
+++ b/style.css
@@ -153,8 +153,9 @@ img.aligncenter {
 	height: 80px;
 	margin: 0px;
 	padding: 0px 80px 0px 80px;
-	line-height: 60px;
-	text-decoration: none;
+	line-height: 80px;
+	text-align:center
+	
 	text-transform: uppercase;
 
    	font-size:60px;
