--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ Released for free under the Creative Commons Attribution License
 body {
 	margin: 0;
 	padding: 0;
-        background: #8282FF url(images/img03.jpg) repeat;
+        background: #8282FF url(TEST.1.jpg) repeat;
 	font-family: 'Open Sans', sans-serif;
 	font-size: 13px;
 	color:#9F1CFF;
