--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@ Released for free under the Creative Commons Attribution License
 body {
 	margin: 0;
 	padding: 0;
-        background: #FF url(TEST.1.jpg) repeat;
+        background: #A9A9A9 url(TEST.1.jpg) repeat;
+	 background-image: url(TEST.1.jpgjpg);
 	font-family: 'Open Sans', sans-serif;
 	font-size: 13px;
 	color:#9F1CFF;
