--- a/style.css
+++ b/style.css
@@ -204,7 +204,7 @@ img.aligncenter {
 .post {
 	clear: both;
 	padding: 30px 0px;
-	border-bottom: 4px solid #EA5A4B;
+	border-bottom: 4px solid #8B4513;
 }
 
 .post .title {
