--- a/style.css
+++ b/style.css
@@ -248,7 +248,7 @@ img.aligncenter {
 	display: block;
 	width: 96px;
 	padding: 2px 0px 2px 0px;
-	background: #A53602;
+	background: #8B4513;
 	text-align: center;
 	text-transform: uppercase;
 	font-size: 10px;
@@ -353,9 +353,9 @@ img.aligncenter {
 	padding: 30px 0px;
 	line-height: normal;
 	text-align: center;
-	color: #FF63FF;
+	color:#000000;
 }
 
 #footer a {
-	color: #FF63FF;
+	color:#000000;
 }
