--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 	 background-image: url(TEST.1.jpgjpg);
 	font-family: 'Open Sans', sans-serif;
 	font-size: 13px;
-	color:#9F1CFF;
+	color:#000000;
 }
 
 h1, h2, h3 {
