--- a/style.css
+++ b/style.css
@@ -297,7 +297,7 @@ img.aligncenter {
 	height: 38px;
 	margin-bottom: 20px;
 	padding: 12px 0 0 0;
-	border-bottom: 4px solid #EA5A4B;
+	border-bottom: 4px solid  #8B4513;
 	letter-spacing: -1px;
 	font-size: 24px;
 	color: #484848;
